--- a/examportal angular/front/src/app/app.component.html
+++ b/examportal angular/front/src/app/app.component.html
@@ -1,20 +1,5 @@
 
-<div class="bootstrap-wrapper">
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-<div class="container">
-  <h1>Welcome to Shivam Exam Portal</h1>
-  <!-- <button mat-raised-button color="primary">Primary</button>
-      <button mat-raised-button color="accent">Accent</button>
-      <button mat-raised-button color="warn">Warn</button> -->
-      <div class="row">
-        <div class="col-md-6">
-          <h1>LEFT SIDE</h1>
-          <button mat-raised-button color="accent">Wow</button>
-        </div>
-        <div class="col-md-6">
-          <h1>RIGHT SIDE</h1>
-          <button mat-raised-button color="primary">Wow</button>
-        </div>
-      </div>
-</div>
-</div>
+
