--- a/examportal angular/front/src/app/components/navbar/navbar.component.html
+++ b/examportal angular/front/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,17 @@
 <!-- <p>navbar works!</p> -->
+<mat-toolbar color="warn">
+    <a routerLink="/" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </a>
+    <span>Shivam Exam Portal</span>
+    <span class="example-spacer"></span>
+    <a routerLink="/login" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <!-- <mat-icon>login</mat-icon> -->
+      Login
+    </a>
+    <a routerLink="/signup" mat-icon-button class="example-icon favorite-icon ml20 mr20" aria-label="Example icon-button with heart icon">
+        <!-- <mat-icon>login</mat-icon> -->
+        Register
+      </a>
+  </mat-toolbar>
+  
