--- a/examportal angular/front/src/app/pages/login/login.component.html
+++ b/examportal angular/front/src/app/pages/login/login.component.html
@@ -1,1 +1,44 @@
-<p>login works!</p>
+<div class="bootstrap-wrapper">
+    <div class="container">
+        <div class="row" style="margin-top: 20px;">
+            <div class="col-md-6 offset-md-3">
+                
+                <div class="container text-center">
+                    <img src="../../../assets/logo3.png" width="100px" height="100px" class="rounded" alt="">
+                </div>
+                <h1 class="text-center">Login</h1>
+                <form action="">
+                    <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Username</mat-label>
+                        <input required
+                        
+                        matInput 
+                        placeholder="Username">
+                        
+                        <!-- <mat-hint>Username must be unique</mat-hint> -->
+                        
+                      </mat-form-field>
+                      <br><br>
+                      <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Password</mat-label>
+                        <input required type="password"
+                        
+                        matInput 
+                        placeholder="Password">
+                        
+                        
+                        
+                      </mat-form-field>
+
+                      <div class="container text-center">
+                        <button mat-raised-button color="primary" type="submit">Login</button>
+                        <button mat-raised-button color="accent" style="margin-left: 20px;">Clear</button>
+                      </div>
+                    
+                </form>
+            
+            </div>
+        </div>
+    </div>
+</div>
+
