--- a/examportal angular/front/src/app/components/navbar/navbar.component.html
+++ b/examportal angular/front/src/app/components/navbar/navbar.component.html
@@ -5,13 +5,35 @@
     </a>
     <span>Shivam Exam Portal</span>
     <span class="example-spacer"></span>
-    <a routerLink="/login" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <a 
+    *ngIf="!isLoggedIn"
+    routerLink="/login" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <!-- <mat-icon>login</mat-icon> -->
       Login
     </a>
-    <a routerLink="/signup" mat-icon-button class="example-icon favorite-icon ml20 mr20" aria-label="Example icon-button with heart icon">
+    <a 
+    *ngIf="!isLoggedIn"
+    routerLink="/signup" mat-icon-button class="example-icon favorite-icon ml20 mr20" aria-label="Example icon-button with heart icon">
         <!-- <mat-icon>login</mat-icon> -->
         Register
       </a>
+      <a 
+      
+      
+      *ngIf="isLoggedIn&&user"
+      mat-icon-button
+      
+      class="example-icon favorite-icon ml20 " aria-label="Example icon-button with heart icon">
+          <!-- <mat-icon>login</mat-icon> -->
+          {{login.getUser().username}}
+        </a>
+      <a 
+      (click)="logout()";
+
+      *ngIf="isLoggedIn"
+      mat-icon-button class="example-icon favorite-icon ml20 mr20" aria-label="Example icon-button with heart icon">
+          <!-- <mat-icon>login</mat-icon> -->
+          Logout
+        </a>
   </mat-toolbar>
   
