--- a/examportal angular/front/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/examportal angular/front/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-action-list>
         <div mat-subheader>Menu </div>
-        <button mat-list-item>
+        <button routerLink="/admin" mat-list-item>
             <mat-icon mat-list-icon>
                 home
             </mat-icon>
@@ -13,6 +13,41 @@
                 accessible
             </mat-icon>
             Profile
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            
+            <mat-icon mat-list-icon>
+                list
+            </mat-icon>
+            Categories
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            
+            <mat-icon mat-list-icon>
+                add_circle_outline
+            </mat-icon>
+            Add Categories
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            
+            <mat-icon mat-list-icon>
+                quiz
+            </mat-icon>
+            Quizzes
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            
+            <mat-icon mat-list-icon>
+                add
+            </mat-icon>
+            Add Quizzes
+        </button>
+        <button mat-list-item routerLink="/admin/profile">
+            
+            <mat-icon mat-list-icon>
+                logout
+            </mat-icon>
+            Logout 
         </button>
     </mat-action-list>
 </mat-card>
