--- a/examportal angular/front/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/examportal angular/front/src/app/pages/admin/sidebar/sidebar.component.html
@@ -14,28 +14,28 @@
             </mat-icon>
             Profile
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/categories">
             
             <mat-icon mat-list-icon>
                 list
             </mat-icon>
             Categories
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/add-category">
             
             <mat-icon mat-list-icon>
                 add_circle_outline
             </mat-icon>
             Add Categories
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/quizzes">
             
             <mat-icon mat-list-icon>
                 quiz
             </mat-icon>
             Quizzes
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/add-quiz">
             
             <mat-icon mat-list-icon>
                 add
