--- a/examportal angular/front/src/app/pages/admin/add-question/add-question.component.html
+++ b/examportal angular/front/src/app/pages/admin/add-question/add-question.component.html
@@ -10,10 +10,12 @@
                 </mat-card-header>
                 <mat-card-content>
                     <form (submit)="formSubmit()">
-                        <mat-form-field class="w100" appearance="fill">
+                        <!-- <mat-form-field class="w100" appearance="fill">
                             <mat-label>Write Question Content</mat-label>
                             <textarea [(ngModel)]="question.content" matInput placeholder="Enter here " name="content"></textarea>
-                          </mat-form-field>
+                          </mat-form-field> -->
+                          <ckeditor [editor]="Editor" data="<p>Wite your Question here </p>" name="content" [(ngModel)]="question.content"></ckeditor>
+
                           <div class="row">
                             <div class="col-md-6">
                                 <mat-form-field class="w100">
