--- a/examportal angular/front/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/examportal angular/front/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,15 @@
-<p>user-dashboard works!</p>
+<div class="bootstrap-wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <app-sidebar-user></app-sidebar-user>
+            </div>
+            <div class="col-md-9">
+                
+                <router-outlet>
+
+                </router-outlet>
+            </div>
+        </div>
+    </div>
+</div>
