--- a/examportal angular/front/src/app/pages/user/instructions/instructions.component.html
+++ b/examportal angular/front/src/app/pages/user/instructions/instructions.component.html
@@ -21,8 +21,8 @@
                             <li>Quiz is only for practice purpose </li>
                         </ul>
                     </mat-card-content>
-                    <mat-card-actions>
-
+                    <mat-card-actions class="text-center">
+                        <button mat-raised-button color="primary" (click)="startQuiz()">Start Quiz </button>
                     </mat-card-actions>
                 </mat-card>
             </div>
