--- a/examportal angular/front/src/app/pages/user/start/start.component.html
+++ b/examportal angular/front/src/app/pages/user/start/start.component.html
@@ -43,6 +43,21 @@
                 </div>
             </div>
             <div class="col-md-2">
+                <mat-card  style="margin-top: 70px;">
+                    <mat-card-header>
+                        <mat-card-title>
+                            Progress
+                        </mat-card-title>
+                        <mat-card-subtitle>
+                            Quiz will be automatically submitted when timer reaches 0.0
+                        </mat-card-subtitle>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <h1 class="text-center">{{getFormattedTime()}}</h1>
+                        <mat-spinner style="margin: auto;" mode="determinate" [value]="(timer/this.questions.length*2*60)*100"></mat-spinner>
+                    </mat-card-content>
+                </mat-card>
+
 
             </div>
         </div>
