--- a/examportal angular/front/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
+++ b/examportal angular/front/src/app/pages/admin/view-quiz-questions/view-quiz-questions.component.html
@@ -34,10 +34,10 @@
                             </p>
                         </div>
                     </mat-card-content>
-                    <mar-card-actions>
+                    <mat-card-actions>
                         <button mat-raised-button (click)="deleteQuestion(q.quesId)" color="primary">Delete</button>
                         <button mat-raised-button color="primary">Delete</button>
-                    </mar-card-actions>
+                    </mat-card-actions>
                 </mat-card>
             </div>
         </div>
